Añadida la traduccion al inglés de Control de calidad de concreto y el footer

--- a/index.html
+++ b/index.html
@@ -199,21 +199,17 @@
         <h2 class="text-center " data-section="nosotros" data-value="titulo">SOBRE NOSOTROS</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md" data-section="nosotros" data-value="info-1">
                     <p>Geonicsa, una firma consultora con más de dos décadas de experiencia, se estableció con el
                         compromiso de realizar nuestro trabajo con los estándares de calidad y excelencia que nos han
                         definido desde nuestra fundación hasta la actualidad.
 
-                    </p>
-                    <p>
+                    <br><br>
                         Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas,
                         respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro
                         trabajo.
 
-                    </p>
-                    <p>
-
-
+                    <br><br>
                         En Geonicsa, abogamos por la transparencia y sinceridad en todas nuestras interacciones con
                         clientes tanto nacionales como internacionales. Este enfoque nos permite garantizar la claridad
                         necesaria para mantener la calidad en cada uno de nuestros servicios.
@@ -328,7 +324,7 @@
         <footer class="py-5">
             <div class="row">
                 <div class="col-6 col-md-2 mb-3">
-                    <h5>Contáctanos</h5>
+                    <h5 data-section="footer" data-value="contacto">Contáctanos</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
@@ -359,17 +355,17 @@
                 </div>
 
                 <div class="col-6 col-md-2 mb-3">
-                    <h5>Horario</h5>
+                    <h5 data-section="footer" data-value="horario">Horario</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Lunes a
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" data-section="footer" data-value="dias-habiles">Lunes a
                                 Viernes:</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Sabado y
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" data-section="footer" data-value="dias-no-habiles">Sabado y
                                 Domingo:</a></li>
                     </ul>
                 </div>
 
                 <div class="col-6 col-md-2 mb-3">
-                    <h5>Nuestras redes sociales</h5>
+                    <h5 data-section="footer" data-value="redes">Nuestras redes sociales</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
@@ -393,7 +389,7 @@
 
                 <div class="col-md-5 offset-md-1 mb-3">
                     <img src="./img/icons/location_icon.png" class="d-inline" style="width: 2.2rem !important;">
-                    <h4 class="d-inline">Nuestra ubicación</h4>
+                    <h4 class="d-inline" data-section="footer" data-value="ubicacion">Nuestra ubicación</h4>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.4817587951065!2d-86.31358561869213!3d12.14756960173846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f715787c0a35f9b%3A0x816de1748fe3ee28!2sLaboratorio%20geonic!5e0!3m2!1sen!2sni!4v1705983589300!5m2!1sen!2sni"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
