PRUEBA CON HTACCESS EN EL NAVBAR

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                        <a class="nav-link dropdown-toggle" href="" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                            <li><a class="dropdown-item" href="estudios-geotecnicos" data-section="nav"
                                     data-value="servicio1">Estudios de
                                     suelos</a></li>
-                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
-                            <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos" data-section="nav"
                                     data-value="servicio3">Laboratorio de suelos</a></li>
-                            <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                            <li><a class="dropdown-item" href="perforacion" data-section="nav"
                                     data-value="servicio4">Perforación</a></li>
                         </ul>
                     </li>
