Agregada la traducción del servicio de perforación

--- a/perforacion.html
+++ b/perforacion.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row ">
                 <div class="col-md descripcion-servicio">
-                    <p>Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios
+                    <p data-section="perforacion" data-value="resumen">Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios
                         de
                         suelos, brindando servicios a una variedad de clientes en el sector de la construcción. La
                         empresa
@@ -106,10 +106,10 @@
 
 
                 <div class="col-md descripcion-servicio">
-                    <h3 class="fs-5">Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
+                    <h3 class="fs-5" data-section="perforacion" data-value="servicios-titulo" >Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
                     <div class="d-flex" style="height: fit-content;">
                         <div class="vr"></div>
-                        <div>
+                        <div data-section="perforacion" data-value="servicios-lista">
 
 
                             <ul>
