--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="static/styles.css" rel="stylesheet">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,8 +39,8 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
@@ -58,7 +58,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav"
+                            data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -199,23 +200,24 @@
         <h2 class="text-center " data-section="nosotros" data-value="titulo">SOBRE NOSOTROS</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md" data-section="nosotros" data-value="info-1">
-                    <p>Geonicsa, una firma consultora con más de dos décadas de experiencia, se estableció con el
+                <div class="col-md">
+                    <p data-section="nosotros" data-value="info-1">Geonicsa, una firma consultora con más de dos décadas
+                        de experiencia, se estableció con el
                         compromiso de realizar nuestro trabajo con los estándares de calidad y excelencia que nos han
                         definido desde nuestra fundación hasta la actualidad.
 
-                    <br><br>
+                        <br><br>
                         Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas,
                         respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro
                         trabajo.
 
-                    <br><br>
+                        <br><br>
                         En Geonicsa, abogamos por la transparencia y sinceridad en todas nuestras interacciones con
                         clientes tanto nacionales como internacionales. Este enfoque nos permite garantizar la claridad
                         necesaria para mantener la calidad en cada uno de nuestros servicios.
 
                     </p>
-                    
+
                 </div>
                 <div class="col-md">
                     <img loading="lazy" src="./img/sobre-nosotros.jpg" style="width: 100%;
@@ -357,10 +359,13 @@
                 <div class="col-6 col-md-2 mb-3">
                     <h5 data-section="footer" data-value="horario">Horario</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" data-section="footer" data-value="dias-habiles">Lunes a
-                                Viernes:</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" data-section="footer" data-value="dias-no-habiles">Sabado y
-                                Domingo:</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="dias-habiles">Lunes a
+                                Viernes:</a> 7:00 AM - 4:00 PM</li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="sabado">Sábados:</a> 7:00 AM - 12:00 MD</li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                data-section="footer" data-value="domingo">Domingos:</a> CERRADO</li>
                     </ul>
                 </div>
 
