Centrados los textos de la lista de servicios en la página de inicio

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio1">Estudios
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio1">Estudios
                                     Geotécnicos</h3>
                             </a>
                         </div>
@@ -146,7 +146,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio2">Control de
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio2">Control de
                                     Calidad de Materiales</h3>
                             </a>
                         </div>
@@ -163,7 +163,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio3">Laboratorio de
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio3">Laboratorio de
                                     suelos
                                 </h3>
                             </a>
@@ -180,7 +180,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title fs-5" data-section="inicio" data-value="servicio4">Perforación
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio4">Perforación
                                 </h3>
                             </a>
                         </div>
