AHORA TODAS LAS CARDS DE LOS SERVICIOS TIENEN EL MISMO TAMAÑO

--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -104,8 +104,8 @@
             <div class="row justify-content-center">
 
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="control-calidad-del-concreto.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -121,8 +121,8 @@
                 </div>
 
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="control-de-calidad-de-suelos.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
