--- a/index.html
+++ b/index.html
@@ -115,13 +115,12 @@
     <!--NUESTROS SERVICIOS-->
     <div class="container servicios-inicio">
         <h2 class="text-center" data-section="inicio" data-value="titulo-servicios">NUESTROS SERVICIOS</h2>
-        <!--PRIMERA FORMA-->
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row">
 
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="estudios-geotecnicos.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -137,8 +136,8 @@
                 </div>
 
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="control-de-calidad-de-materiales.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -154,8 +153,8 @@
                 </div>
 
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="laboratorio-de-suelos.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -171,8 +170,8 @@
                     </div>
                 </div>
                 <div class="col-md col-lg-3 ">
-                    <div class="card" style="width: 100%; padding:0.5rem !important;">
-                        <div class="card-body">
+                    <div class="card card-servicio" style="width: 100%; padding:0.5rem !important;">
+                        <div class="card-body d-flex justify-content-center align-items-center">
                             <a href="perforacion.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
@@ -180,8 +179,7 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio4">Perforación
-                                </h3>
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio4">Perforación</h3>
                             </a>
                         </div>
                     </div>
