Cambios en el horario del footer

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
                                 data-section="footer" data-value="sabado">Sábados:</a> 7:00 AM - 12:00 MD</li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
-                                data-section="footer" data-value="domingo">Domingos:</a> CERRADO</li>
+                                data-section="footer" data-value="horario-domingo">Domingos: </a></li>
                     </ul>
                 </div>
 
