TODAS LAS CARDS TIENEN AHORA EL MISMO TAMAÑO

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -98,8 +98,8 @@
         <div class="row descripcion-servicio">
             <div class="col-md">
 
-                <div class="card card-desc">
-                    <div class="card-body">
+                <div class="card card-desc card-servicio">
+                    <div class="card-body justify-content-center align-items-center">
                         <h4 class="text-center fs-5">Cilindros de Concreto</h4>
                         <p> Los cilindros de concreto se utilizan para realizar pruebas de resistencia a la
                             compresión.
@@ -132,8 +132,8 @@
 
 
             <div class="col-md ">
-                <div class="card card-desc">
-                    <div class="card-body">
+                <div class="card card-desc card-servicio">
+                    <div class="card-body align-items-center">
                         <h4 class="text-center fs-5">Cubos de concreto</h4>
                         <p>
                             Los cubos se utilizan para realizar pruebas de resistencia a la compresión,
