--- a/laboratorio-de-suelos.html
+++ b/laboratorio-de-suelos.html
@@ -17,8 +17,8 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-     <!-- AQUÍ COMIENZA EL NAVBAR-->
-     <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <!-- AQUÍ COMIENZA EL NAVBAR-->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
         <div class="container-fluid nav-tuneado">
             <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -38,8 +38,8 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
@@ -56,7 +56,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav"
+                            data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -115,12 +116,14 @@
 
             <div class="row " style="margin-top: 5vh !important;">
                 <div class="col-md ">
-                    <div class="card">
+                    <div class="card card-desc card-servicio">
                         <div class="card-header">
-                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-1-titulo">Preparación de Muestras</h3>
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-1-titulo">
+                                Preparación de Muestras</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-1-desc">Los laboratorios de suelos reciben muestras de suelos tomadas de sitios específicos, ya
+                            <p data-section="laboratorio-suelos" data-value="actividad-1-desc">Los laboratorios de
+                                suelos reciben muestras de suelos tomadas de sitios específicos, ya
                                 sea durante la exploración del subsuelo o como parte de proyectos de construcción. La
                                 preparación de estas muestras es una fase inicial crítica.
                             </p>
@@ -130,48 +133,50 @@
                 </div>
 
                 <div class="col-md ">
-                    <div class="col-md ">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-2-titulo">Análisis de Granulometría:</h3>
-                            </div>
-                            <div class="card-body">
-                                <p data-section="laboratorio-suelos" data-value="actividad-2-desc">Se determina la distribución de tamaños de partículas en una muestra de suelo. Esto
-                                    es esencial para clasificar el suelo según sistemas de clasificación como el sistema
-                                    de clasificación de suelos unificado (USCS).
-
-
-                                </p>
-                            </div>
+                    <div class="card card-desc card-servicio">
+                        <div class="card-header">
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-2-titulo">Análisis
+                                de Granulometría:</h3>
                         </div>
+                        <div class="card-body">
+                            <p data-section="laboratorio-suelos" data-value="actividad-2-desc">Se determina la
+                                distribución de tamaños de partículas en una muestra de suelo. Esto
+                                es esencial para clasificar el suelo según sistemas de clasificación como el sistema
+                                de clasificación de suelos unificado (USCS).
 
+
+                            </p>
+                        </div>
                     </div>
+
                 </div>
                 <div class="col-md ">
-                    <div class="col-md ">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-3-titulo">Límites de Atterberg:</h3>
-                            </div>
-                            <div class="card-body">
-                                <p data-section="laboratorio-suelos" data-value="actividad-3-desc">Se realizan pruebas para determinar los límites de plasticidad y límites de liquidez
-                                    del suelo. Estos límites son importantes para comprender el comportamiento del suelo
-                                    bajo diferentes condiciones de humedad.
-                                </p>
-                            </div>
+                    <div class="card card-desc card-servicio">
+                        <div class="card-header">
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-3-titulo">Límites
+                                de Atterberg:</h3>
                         </div>
-
+                        <div class="card-body">
+                            <p data-section="laboratorio-suelos" data-value="actividad-3-desc">Se realizan pruebas para
+                                determinar los límites de plasticidad y límites de liquidez
+                                del suelo. Estos límites son importantes para comprender el comportamiento del suelo
+                                bajo diferentes condiciones de humedad.
+                            </p>
+                        </div>
                     </div>
+
                 </div>
             </div>
             <div class="row " style="margin-top: 2vh !important;">
                 <div class="col-md ">
-                    <div class="card">
+                    <div class="card card-desc card-servicio">
                         <div class="card-header">
-                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-4-titulo">Pruebas de Compactación:</h3>
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-4-titulo">Pruebas
+                                de Compactación:</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-4-desc">Se llevan a cabo pruebas de compactación para evaluar la densidad máxima y la humedad
+                            <p data-section="laboratorio-suelos" data-value="actividad-4-desc">Se llevan a cabo pruebas
+                                de compactación para evaluar la densidad máxima y la humedad
                                 óptima del suelo bajo condiciones específicas de compactación. Esto es esencial para el
                                 diseño de terraplenes y cimentaciones.
                             </p>
@@ -181,41 +186,41 @@
                 </div>
 
                 <div class="col-md ">
-                    <div class="col-md ">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-5-titulo">Pruebas de Corte Directo y Triaxiales:</h3>
-                            </div>
-                            <div class="card-body">
-                                <p data-section="laboratorio-suelos" data-value="actividad-5-desc">Se realizan pruebas para evaluar la resistencia al corte del suelo en diferentes
-                                    condiciones de esfuerzo. Esto es crucial para el diseño de estructuras de retención,
-                                    muros de contención y otros elementos geotécnicos.
+                    <div class="card card-desc card-servicio">
+                        <div class="card-header">
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-5-titulo">Pruebas
+                                de Corte Directo y Triaxiales:</h3>
+                        </div>
+                        <div class="card-body">
+                            <p data-section="laboratorio-suelos" data-value="actividad-5-desc">Se realizan pruebas para
+                                evaluar la resistencia al corte del suelo en diferentes
+                                condiciones de esfuerzo. Esto es crucial para el diseño de estructuras de retención,
+                                muros de contención y otros elementos geotécnicos.
 
-                                </p>
-                            </div>
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md ">
+
+                    <div class="card card-desc card-servicio">
+                        <div class="card-header">
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-6-titulo">Pruebas
+                                de Consolidación:</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>Se realizan pruebas de consolidación para evaluar la compresibilidad y la capacidad
+                                de asentamiento del suelo. Esto es vital para proyectos en los que se espera
+                                asentamiento significativo.
+                            </p>
                         </div>
 
                     </div>
                 </div>
                 <div class="col-md ">
                     <div class="col-md ">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-6-titulo">Pruebas de Consolidación:</h3>
-                            </div>
-                            <div class="card-body">
-                                <p>Se realizan pruebas de consolidación para evaluar la compresibilidad y la capacidad
-                                    de asentamiento del suelo. Esto es vital para proyectos en los que se espera
-                                    asentamiento significativo.
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-md ">
-                    <div class="col-md ">
-                        <div class="card">
+                        <div class="card card-desc card-servicio">
                             <div class="card-header">
                                 <h3 class="fs-5">Densidad del suelo In Situ:</h3>
                             </div>
