--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -102,7 +102,7 @@
             <div class="row ">
                 <div class="col-md">
 
-                    <div class="card card-desc">
+                    <div class="card card-desc card-servicio">
                         <div class="card-body">
                             <h4 class="text-center fs-5" data-section="control-calidad-suelos"
                                 data-value="metodo-1-titulo">Prueba de Compactación con Cono de Arena
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-md">
 
-                    <div class="card card-desc">
+                    <div class="card card-desc card-servicio">
                         <div class="card-body">
                             <h4 class="text-center fs-5" data-section="control-calidad-suelos" data-value="metodo-2-titulo">Prueba de Compactación con Densímetro Nuclear</h4>
                             <div data-section="control-calidad-suelos" data-value="metodo-2-desc">
