Agregué el lazy loading a las imagenes

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <div class="col-md ">
                             <div class="card" style="width: 100%;">
                                 <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                    class="card-img-top imagen-proyectos" alt="...">
+                                    class="card-img-top imagen-proyectos" loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">Prueba aerodromo los brasiles</p>
                                 </div>
@@ -250,7 +250,7 @@
                         <div class="col-md">
                             <div class="card" style="width: 100%">
                                 <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    alt="...">
+                                    loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">BONANZA HEMCO</p>
                                 </div>
@@ -259,7 +259,7 @@
                         <div class="col-md">
                             <div class="card" style="width: 100%">
                                 <img src="./img/proyectos/AEROPUERTO_CORN_ISLAND.jpg"
-                                    class="card-img-top imagen-proyectos" alt="...">
+                                    class="card-img-top imagen-proyectos" loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">AEROPUERTO CORN ISLAND</p>
                                 </div>
@@ -272,7 +272,7 @@
                         <div class="col-md ">
                             <div class="card" style="width: 100%;">
                                 <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                    class="card-img-top imagen-proyectos" alt="...">
+                                    class="card-img-top imagen-proyectos" loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">Prueba aerodromo los brasiles</p>
                                 </div>
@@ -281,7 +281,7 @@
                         <div class="col-md">
                             <div class="card" style="width: 100%">
                                 <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    alt="...">
+                                    loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">texto aquí</p>
                                 </div>
@@ -290,7 +290,7 @@
                         <div class="col-md">
                             <div class="card" style="width: 100%">
                                 <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                    alt="...">
+                                    loading="lazy">
                                 <div class="card-body">
                                     <p class="card-text">texto aquí</p>
                                 </div>
