--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -110,7 +110,7 @@
 
 
                 <div class="col-md justify-content-center">
-                    <img src="./img/banner_inicio.jpg" class="img-fluid imagen-servicio mx-auto d-block" alt="...">
+                    <img src="./img/banner_inicio.jpg" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
                 </div>
             </div>
             <hr>
